--- a/mm/Bg_Lotus/Makefile
+++ b/mm/Bg_Lotus/Makefile
@@ -1,4 +1,4 @@
-PROGRAM = Bg_Lotus_ghidra
+PROGRAM = Bg_Lotus
 OVLOUT = $(PROGRAM).zovl
 ADDRESS = 0x80800000
 PARTS = $(PROGRAM).o
@@ -9,7 +9,7 @@ CC   = mips64-gcc
 LD   = mips64-ld
 NOVL = novl
 
-CFLAGS = -G 0 -O2 --std=gnu99 -mtune=vr4300 -mabi=32 -mips3 -mno-explicit-relocs -mno-memcpy
+CFLAGS = -G 0 -Os --std=gnu99 -mtune=vr4300 -mabi=32 -mips3 -mno-explicit-relocs -mno-memcpy
 LDFLAGS = -T $(Z64OVL_LD) --emit-relocs
 NOVLFLAGS = -v -c -A $(ADDRESS) -o $(OVLOUT)
 
