Less filthy data_80ABBBA8; TODO: Clean Up

--- a/oot_mq_dbg/403 - En_Nutsball/Makefile
+++ b/oot_mq_dbg/403 - En_Nutsball/Makefile
@@ -34,3 +34,9 @@ copy:
 
 build:
 	start "C:/Z64/tools/zzrtl.exe" --nowaiting "C:/Z64/mg_dbg_zzrtl/oot_build.rtl"
+
+routine:
+	make clean
+	make
+	make copy
+	make build
