Buggy functions indentified.

--- a/oot_mq_dbg/Makefile
+++ b/oot_mq_dbg/Makefile
@@ -5,3 +5,9 @@ $(SUBDIRS):
 	$(MAKE) -C $@
 
 .PHONY: all $(SUBDIRS)
+
+En_Dekunuts:
+	cd "96 - En_Dekunuts" && $(MAKE) routine
+
+En_Nutsball:
+	cd "403 - En_Nutsball" && $(MAKE) routine
